--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width , initial-scale=1.0">
     <link rel="stylesheet" href="./css/Normalize.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/tingle.min.css">
@@ -11,7 +12,8 @@
 
     <title>Alexander</title>
 </head>
-<body>
+
+<body style='max-width: 500px; margin: 0 auto;'>
 
     <header class="header ">
         <div class="back-text">
@@ -22,81 +24,81 @@
             <li class="icon"></li>
             <li class="icon"></li>
         </ul>
-        <div class="container"> 
-          
+        <div class="container">
+
             <div class="photo">
                 <img src="./img/Ellipse 3.png" alt="">
             </div>
             <p class="header__text">
-                Партнер компании <strong>Greenway</strong> 
+                Партнер компании <strong>Greenway</strong>
             </p>
             <h1 class='header__title'>Александр</h1>
-            <h2  class='header__subtitle'>Наставник</h2>
+            <h2 class='header__subtitle'>Наставник</h2>
         </div>
     </header>
-        <section class="application">
-            <h3 class="white">Начни уже сейчас</h3>
-
-
-
-            <a class="openModal white" onclick="SendModal.open()">Оставить заявку</a>
-        </section>
-        <section class="get-started container">
-            <p class="get-started__title">что ты получишь на старте работы со мной? </p>
-            <div class="get-started-item">
-                <div class="get-started-column">
-                    <span class="get-started-column__number">1</span>
-                    <p class="get-started-column__title">Готовые <br>бизнес-инструменты</p>
-                    <img  class="get-started-column__icon" src="./img/экономика.png" alt="">
-                </div>
-                <span class="get-started__text">Ты будешь обеспечен всем необходимым для твоего бизнеса: продукт, логистика, удобные сервисы, чек-листы.</span>
+    <section class="application">
+        <h3 class="white">Начни уже сейчас</h3>
+        <a class="openModal white" onclick="SendModal.open()">Оставить заявку</a>
+    </section>
+    <section class="get-started container">
+        <p class="get-started__title">что ты получишь на старте работы со мной? </p>
+        <div class="get-started-item">
+            <div class="get-started-column">
+                <span class="get-started-column__number">1</span>
+                <p class="get-started-column__title">Готовые <br>бизнес-инструменты</p>
+                <img class="get-started-column__icon" src="./img/экономика.png" alt="">
             </div>
-            <div class="get-started-item">
-                <div class="get-started-column">
-                    <span class="get-started-column__number">2</span>
-                    <p class="get-started-column__title">рабочий <br>чат</p>
-                    <img  class="get-started-column__icon" src="./img/сообщение.png" alt="">
-                </div>
-                <span class="get-started__text">Ты попадешь в чат, где лидеры моей команды также будут делиться опытом и инструментами.</span>
+            <span class="get-started__text">Ты будешь обеспечен всем необходимым для твоего бизнеса: продукт, логистика,
+                удобные сервисы, чек-листы.</span>
+        </div>
+        <div class="get-started-item">
+            <div class="get-started-column">
+                <span class="get-started-column__number">2</span>
+                <p class="get-started-column__title">рабочий <br>чат</p>
+                <img class="get-started-column__icon" src="./img/сообщение.png" alt="">
             </div>
-            <div class="get-started-item">
-                <div class="get-started-column">
-                    <span class="get-started-column__number">3</span>
-                    <p class="get-started-column__title">личный наставник <br>и поддержка</p>
-                    <img  class="get-started-column__icon" src="./img/рукопожатие.png" alt="">
-                </div>
-                <span class="get-started__text">Я не просто дам информацию и скажу "делай". Я буду твоим наставником и помогу преодолеть проблемы на старте.</span>
+            <span class="get-started__text">Ты попадешь в чат, где лидеры моей команды также будут делиться опытом и
+                инструментами.</span>
+        </div>
+        <div class="get-started-item">
+            <div class="get-started-column">
+                <span class="get-started-column__number">3</span>
+                <p class="get-started-column__title">личный наставник <br>и поддержка</p>
+                <img class="get-started-column__icon" src="./img/рукопожатие.png" alt="">
             </div>
-        </section>
-        <section class="leader">
-            <p class="leader__text">Зарплата у лидера</p>
-            <div class="leader-content">
-                <div class="leader-column">
-                    <img src="./img/groupHuman.png" alt="">
-                    <div class="leader-price">
-                        <p class="leader-price__nubmer">150</p>
-                        <div class="leader-price-item">
-                            <p class="leader-price_kg">kg</p>
-                            <p class="leader-price__text">тыс</p>
-                        </div>
+            <span class="get-started__text">Я не просто дам информацию и скажу "делай". Я буду твоим наставником и
+                помогу преодолеть проблемы на старте.</span>
+        </div>
+    </section>
+    <section class="leader">
+        <p class="leader__text">Зарплата у лидера</p>
+        <div class="leader-content">
+            <div class="leader-column">
+                <img src="./img/groupHuman.png" alt="">
+                <div class="leader-price">
+                    <p class="leader-price__nubmer">150</p>
+                    <div class="leader-price-item">
+                        <p class="leader-price_kg">kg</p>
+                        <p class="leader-price__text">тыс</p>
                     </div>
                 </div>
-                <span class="leader-content__text">
-                    По статистике в течение <b>полугода</b>
-    новичёк достигает статуса <strong>“Лидера”</strong>
-                </span>
             </div>
-        </section>
-        <section class="joing">
-            <div class="joing-perpective container">
-                <div class="joing-wrap">
-                    <p class="joing-wrap__title">Присоеднийся к Greenway</p>
-                    <span class="joing-wrap__text">Начни свой путь к свободе и финансовому успеху</span>
-                    <button class="joing-wrap__button openModal" onclick="SendModal.open()">Начать путь</button>
-                </div>
+            <span class="leader-content__text">
+                По статистике в течение <b>полугода</b>
+                новичёк достигает статуса <strong>“Лидера”</strong>
+            </span>
+        </div>
+    </section>
+    <section class="joing">
+        <div class="joing-perpective container">
+            <div class="joing-wrap">
+                <p class="joing-wrap__title">Присоеднийся к Greenway</p>
+                <span class="joing-wrap__text">Начни свой путь к свободе и финансовому успеху</span>
+                <button class="joing-wrap__button openModal" onclick="SendModal.open()">Начать путь</button>
             </div>
-        </section>
-        <div class="container">
+        </div>
+    </section>
+    <div class="container">
         <section class="about">
             <p class="about__title">greenway</p>
             <hr>
@@ -104,85 +106,89 @@
                 Только вам решать что и когда делать
             </span>
             <div class="about__text">
-                Всего за 4 года существования компании мы открыли представительства 
-                в 39 странах мира: России, Казахстане, Киргизии, Республике Беларусь, Украине, Турции и странах Евросоюза, 
-                запустили 250 региональных центров в 34 городах. И это только начало. 
+                Всего за 4 года существования компании мы открыли представительства
+                в 39 странах мира: России, Казахстане, Киргизии, Республике Беларусь, Украине, Турции и странах
+                Евросоюза,
+                запустили 250 региональных центров в 34 городах. И это только начало.
             </div>
         </section>
     </div>
-        <section class="scope">
-            <p class="scope__title">Возможности с Greenway</p>
-            <div class="scope-cards">
-                <div class="scope-card">
-                    <div class="scope-card__icon">
-                        <img src="./img/icon_push.png" alt="">
-                    </div>
-                    <p class="scope-card__title">Быстрый старт</p>
-                    <span class="scope-card__text">В бизнесе легко разобраться и быстро получить первый доход. 
-                        Мы предлагаем понятные 
-                        инструменты для старта, офисы для встреч, магазины, продуманную логистику, качественный 
-                        и эффективный продукт.</span>
+    <section class="scope">
+        <p class="scope__title">Возможности с Greenway</p>
+        <div class="scope-cards">
+            <div class="scope-card">
+                <div class="scope-card__icon">
+                    <img src="./img/icon_push.png" alt="">
                 </div>
-                <div class="scope-card">
-                    <div class="scope-card__icon">
-                        <img src="./img/icons_noteBook.png" alt="">
-                    </div>
-                    <p class="scope-card__title">Удобство</p>
-                    <span class="scope-card__text">Мобильность бизнеса. Вы выбираете, 
-                        где работать: в офисе, в кафе, дома или на берегу океана. 
-                        Возможность совмещать бизнес с основной работой или учебой.</span>
-                </div>
-                <div class="scope-card">
-                    <div class="scope-card__icon">
-                        <img src="./img/icon_cards.png" alt="">
-                    </div>
-                    <p class="scope-card__title">Высокий доход</p>
-                    <span class="scope-card__text">План вознаграждений без ограничений и рамок. 
-                        Ставьте амбициозные цели, достигайте и продолжайте развиваться.</span>
-                </div>
-                <div class="scope-card">
-                    <div class="scope-card__icon">
-                        <img src="./img/icon_office.png" alt="">
-                    </div>
-                    <p class="scope-card__title">Поддержка</p>
-                    <span class="scope-card__text">Подддежка наставника. 
-                        Это человек, который поможет 
-                        обучиться и поддержит на пути к результату.</span>
-                </div>
+                <p class="scope-card__title">Быстрый старт</p>
+                <span class="scope-card__text">В бизнесе легко разобраться и быстро получить первый доход.
+                    Мы предлагаем понятные
+                    инструменты для старта, офисы для встреч, магазины, продуманную логистику, качественный
+                    и эффективный продукт.</span>
             </div>
-            <button class="scope-button">
-                <svg width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M18.1643 10.5L0.791076 20.4593L0.791077 0.540707L18.1643 10.5Z" fill="url(#paint0_linear)" fill-opacity="0.75"./>
-                    <defs>
-                    <linearGradient id="paint0_linear" x1="-5" y1="16.7976" x2="18.1129" y2="6.82135" gradientUnits="userSpaceOnUse">
-                    <stop offset="0.0579327" stop-color="#00E0FF" />
-                    <stop offset="0.509819" stop-color="#07FEA9" />
-                    <stop offset="0.971498" stop-color="#05FF00" />
+            <div class="scope-card">
+                <div class="scope-card__icon">
+                    <img src="./img/icons_noteBook.png" alt="">
+                </div>
+                <p class="scope-card__title">Удобство</p>
+                <span class="scope-card__text">Мобильность бизнеса. Вы выбираете,
+                    где работать: в офисе, в кафе, дома или на берегу океана.
+                    Возможность совмещать бизнес с основной работой или учебой.</span>
+            </div>
+            <div class="scope-card">
+                <div class="scope-card__icon">
+                    <img src="./img/icon_cards.png" alt="">
+                </div>
+                <p class="scope-card__title">Высокий доход</p>
+                <span class="scope-card__text">План вознаграждений без ограничений и рамок.
+                    Ставьте амбициозные цели, достигайте и продолжайте развиваться.</span>
+            </div>
+            <div class="scope-card">
+                <div class="scope-card__icon">
+                    <img src="./img/icon_office.png" alt="">
+                </div>
+                <p class="scope-card__title">Поддержка</p>
+                <span class="scope-card__text">Подддежка наставника.
+                    Это человек, который поможет
+                    обучиться и поддержит на пути к результату.</span>
+            </div>
+        </div>
+        <button class="scope-button">
+            <svg width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M18.1643 10.5L0.791076 20.4593L0.791077 0.540707L18.1643 10.5Z" fill="url(#paint0_linear)"
+                    fill-opacity="0.75" . />
+                <defs>
+                    <linearGradient id="paint0_linear" x1="-5" y1="16.7976" x2="18.1129" y2="6.82135"
+                        gradientUnits="userSpaceOnUse">
+                        <stop offset="0.0579327" stop-color="#00E0FF" />
+                        <stop offset="0.509819" stop-color="#07FEA9" />
+                        <stop offset="0.971498" stop-color="#05FF00" />
                     </linearGradient>
-                    </defs>
-                </svg>
-                <span class="scope-button__text">Смотреть видео</span>
-            </button>
-        </section>
-        <footer class="footer container">
-            <p class="footer__title">Контакты</p>
-            <span class="footer-item">
-                <p class="footer-item__text">Телефон:</p>
-                <a href="tel:+996-550-188-665" class='footer-item__link'> +996-550-188-665</a>
-            </span>
-            <span class="footer-item">
-                <p class="footer-item__text">E-mail:</p>
-                <a href="mailto:poborshev11@gmail.com" class='footer-item__link'>poborshev9@gmail.com</a>
-            </span>
-            <ul class="footer-networks">
-                <li class="icon"></li>
-                <li class="icon"></li>
-                <li class="icon"></li>
-            </ul>
-            <div class="copyright">2021-2021 ©</div>
-        </footer>
+                </defs>
+            </svg>
+            <span class="scope-button__text">Смотреть видео</span>
+        </button>
+    </section>
+    <footer class="footer container">
+        <p class="footer__title">Контакты</p>
+        <span class="footer-item">
+            <p class="footer-item__text">Телефон:</p>
+            <a href="tel:+996-550-188-665" class='footer-item__link'> +996-550-188-665</a>
+        </span>
+        <span class="footer-item">
+            <p class="footer-item__text">E-mail:</p>
+            <a href="mailto:poborshev11@gmail.com" class='footer-item__link'>Poborshhev@bk.ru</a>
+        </span>
+        <ul class="footer-networks">
+            <li class="icon"></li>
+            <li class="icon"></li>
+            <li class="icon"></li>
+        </ul>
+        <div class="copyright">2021-2021 ©</div>
+    </footer>
     <script src="./js/tingle.min.js"></script>
     <script src="./js/script.js"></script>
-<!--    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>-->
+    <!--    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>-->
 </body>
+
 </html>
